--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,19 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "sensio/framework-extra-bundle": "^5.1",
+        "sensiolabs/security-checker": "^4.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/web-server-bundle": "^4.0",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
@@ -32,7 +40,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
