--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.17.0",
-    "bootstrap-sass": "^3.3.7",
-    "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "webpack-notifier": "^1.5.0"
   },
   "dependencies": {
-    "@coreui/ajax": "^1.0.6",
     "bootstrap": "4.0.0-beta.2",
-    "popper.js": "^1.12.9"
+    "font-awesome": "4.7.0",
+    "jquery": "^3.2.1",
+    "pace-progress": "^1.0.2",
+    "popper.js": "^1.13.0"
   }
 }
