--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,17 @@
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/debug-bundle": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.0",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/orm-pack": "^1.0",
+        "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/web-server-bundle": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
