--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
-    "font-awesome": "4.7.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "pace-progress": "^1.0.2",
-    "popper.js": "^1.13.0"
+    "popper.js": "^1.13.0",
+    "simple-line-icons": "^2.4.1"
   }
 }
