--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,7 +12,7 @@ security:
         our_db_provider:
             entity:
                 class: App\Entity\User
-                #property: username
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
