All work with CORE UI

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,9 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 login_path: login
                 check_path: login
+            logout:
+                path: /logout
+                target: /
 
             # activate different ways to authenticate
             # form_login: ~
