--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/debug-bundle": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
@@ -18,7 +19,9 @@
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
+        "symfony/swiftmailer-bundle": "^3.1",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/web-server-bundle": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
