--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,7 @@
 framework:
+    translator:
+        enabled: false
+    validation: { enable_annotations: true }
     ide: 'phpstorm://open?file=%%f&line=%l'
     secret: '%env(APP_SECRET)%'
     default_locale: hr
